syntax = "proto3";

package surf;

import "proto/baseTypes.proto";
import "proto/gossip.proto";

option csharp_namespace = "Surf.Proto";

message MessageEnvelope { 
    oneof type { 
        Ping ping = 1;
        PingReq pingReq = 2;
        Ack ack =3;
        AckReq ackReq = 4;
    }
}

message Ping {
   repeated GossipEnvelope gossip = 1;
   sfixed32 localTime = 2;
}

message PingReq {
    MemberAddress fromMember = 1;
    MemberAddress toMember = 2;
    sfixed32 localTime = 3;
}

message Ack {
    sfixed32 localTime = 1;
}

message AckReq {
    MemberAddress fromMember = 1;
    MemberAddress toMember = 2;
    sfixed32 localTime = 3;
}